--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=AuthService
 
 # MySQL Database Configuration
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/authservice?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DB:authservice}?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=password123
+spring.datasource.password=password
 
 # JPA & Hibernate
 spring.jpa.show-sql=true
@@ -19,3 +19,9 @@ server.port=9898
 # Logging
 logging.level.org.springframework.security=DEBUG
 logging.level.com.your.package.name=DEBUG
+
+# event publisher
+spring.kafka.producer.bootstrap-servers= 13.234.166.239
+spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer= com.example.AuthService.serializer.UserInfoSerializer
+spring.kafka.topic-json.name=user_service
