--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=AuthService
 
 # MySQL Database Configuration
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DB:authservice}?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:3.7.169.92}:${MYSQL_PORT:3306}/${MYSQL_DB:authservice}?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=password
 
@@ -21,7 +21,8 @@ logging.level.org.springframework.security=DEBUG
 logging.level.com.your.package.name=DEBUG
 
 # event publisher
-spring.kafka.producer.bootstrap-servers= 13.234.166.239
+spring.kafka.producer.bootstrap-servers= 3.7.169.92:9092
 spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer= com.example.AuthService.serializer.UserInfoSerializer
 spring.kafka.topic-json.name=user_service
+spring.kafka.producer.properties.spring.json.type.mapping=auth:AuthService.model.UserInfoEvent
